configure java vm